Adding sales api

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h3>Head over to url to get api data</h3>
+<div style="margin-left: auto; margin-right: auto;">
+    <h3>Head over to</h3>
+    <a href="https://luciferpd13.github.io/sales.json">https://luciferpd13.github.io/sales.json</a>
+    <h3>get api data</h3>
+</div>
